# SoftwareRenderer

./: .gitignore  CMakeLists.txt  Doxyfile.in  IRasterizer.h  LICENSE  Main.cpp  README.md  Rasterizer.h  VertexProcessor.h
cmake/: FindSDL2.cmake  FindSDL2_image.cmake
docs/: README.md
src/: CMakeLists.txt
src/examples/: Benchmark.cpp  Box.cpp  CMakeLists.txt  Crate.cpp  ObjData.cpp  ObjData.h  Random.cpp  Random.h  RasterizerTest.cpp  Texture.h  TextureExample.h  VertexProcessorTest.cpp  vector_math.h
src/renderer/: CMakeLists.txt  EdgeData.h  EdgeEquation.h  IRasterizer.h  LineClipper.cpp  LineClipper.h  ParameterEquation.h  PixelData.h  PixelShaderBase.h  PolyClipper.cpp  PolyClipper.h  Rasterizer.h  Renderer.h  TriangleEquations.h  VertexCache.h  VertexConfig.h  VertexProcessor.cpp  VertexProcessor.h  VertexShaderBase.h
